--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#about">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="involve.html">Get Involved</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="involve.html#governance">Governance</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="auction.html">Auction</a></li> 
                     </ul>
                 </div>
             </div>
@@ -178,7 +177,7 @@
                 <!-- About Section Content-->
                 <div class="container">
                     <h3><i class="fas fa-space-shuttle mr-3"></i>Opportunity</h3>
-                    <p>The ESL Industry is estimated to be at $80 Billion USD and has a lot of opportunity for improvement. From tutor matching to accommodation and improving school grades, ESL Coin seeks to create an open sourced ecosystem for developers to create dApps to disrupt & decentralize this multi billion dollar industry.</p>
+                    <p>The ESL Industry is estimated to be at $84 Billion USD and has a lot of opportunity for improvement. From tutor matching to accommodation and improving school grades, ESL Coin seeks to create an open sourced ecosystem for developers to create dApps to disrupt & decentralize this multi billion dollar industry.</p>
                 </div>
                 <div class="container">
                     <h3><i class="fas fa-users mr-3"></i>Team</h3>
@@ -186,13 +185,15 @@
                 </div>
                 <div class="container">
                     <h3><i class="fas fa-database mr-3"></i>Tokenomics</h3>
-                    <p>ESL Coin is designed to be a <b><u>UTILITY TOKEN</u></b> and the whole project is a huge experiment until we reach DEAN PHASE (Phase 6).</p>
-                    <p>The Tron implementation of ESL Coin will consist of an initial technical launch phase through an auction with a daily emission starting at 250k tokens. The tokens emitted will decrease over time to ensure price stability. A development pool of 3 Million premine is retained by the development team and will be unlocked overtime for the purpose of: </p>
+                    <p>ESL Coin is designed to be a deflationary <b><u>UTILITY TOKEN</u></b> and the whole project is a huge experiment until we reach DEAN PHASE (Phase 6).</p>
+                    <p>The token will have a supply cap of 10 Million Tokens and a 7% burn mechanism to ensure deflationary property.</p>
+                    <p>The Binance Smart Chain implementation of ESL Coin will consist of a technical launch within the BSC ecosystem followed by an eventual public launch to major centralized exchanges.</p>
+                    <p>A development pool of 3 Million premine is retained by the development team and will be unlocked overtime for the purpose of: </p>
                     <div class="row">
                         <div class="col-lg-6 ml-auto">
                             <div class="container">
-                                <p><b>Ecosystem</b>  | 33.33% | 1,000,000 ESL</p>
-                                <p>ESL tokens reserved for future ecosystem objectives like partnerships, marketing, hiring, governance & DAO etc.</p>
+                                <p><b>Ecosystem</b>  | 10% | 1,000,000 ESL</p>
+                                <p>ESL tokens reserved for future ecosystem objectives like partnerships, marketing, governance & DAO etc.</p>
                                 <ul>
                                     <li>Tokens Vested over 24 months</li>
                                     <li>4.00% budgeted for launch month</li>
@@ -201,8 +202,8 @@
                                 <br>
                             </div>
                             <div class="container">
-                                <p><b>Launch Liquidity</b>  | 20.00% | 600,000 ESL</p>
-                                <p>ESL tokens reserved for liquidity with in-house & external exchanges (Eg. Just Swap and USwap).</p>
+                                <p><b>Farming Rewards</b>  | 70.00% | 7,000,000 ESL</p>
+                                <p>ESL tokens reserved for liquidity with in-house & external exchanges (Eg. PancakeSwap).</p>
                                 <br>
                             </div>
                             <div class="container">
@@ -244,7 +245,7 @@
             </div>
                 <!-- Contract Section Button
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://tronscan.org/#/contract/">
+                    <a class="btn btn-xl btn-outline-light" href="https://BSCscan.org/#/contract/">
                         <i class="fas fa-book mr-2"></i>
                         Live ESL Coin Contract.
                     </a>
@@ -255,84 +256,6 @@
                 </div>
                 -->
             </section>
-
-
-        <!-- As Mentioned Section
-        <section class="page-section bg-secondary text-white mb-0" id="mentions">
-            <div class="container">
-                <h2 class="page-section-heading text-center text-uppercase text-white">Media Mentions:</h2>
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>               
-                <div class="row">
-                    <div class="col-md-6 col-lg-2 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal">
-                            <a href="https://dappradar.com/tron/high-risk/esl-coin">
-                            <img class="img-fluid" src="assets/img/mentions/dappradar.svg" alt="" />
-                        </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-2 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal">
-                            <a href="https://tronfarms.org/">
-                            <img class="img-fluid" src="assets/img/mentions/tronfarms_logo.svg" alt="" />
-                        </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-2 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal">
-                            <a href="https://www.trontab.com">
-                            <img class="img-fluid" src="assets/img/mentions/trontab.png" alt="" />
-                        </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-2 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal">
-                            <a href="https://www.stateofthedapps.com/">
-                            <img class="img-fluid" src="assets/img/mentions/stateofthedapps.png" alt="" />
-                        </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-2 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal">
-                            <a href="https://www.dappstats.com/">
-                            <img class="img-fluid" src="assets/img/mentions/dappstats.svg" alt="" />
-                        </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-2 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal">
-                            <a href="https://dapp-world.com/">
-                            <img class="img-fluid" src="assets/img/mentions/dappworld.png" alt="" />
-                        </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-2 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal">
-                            <a href="https://dappradar.com/tron/high-risk/esl-coin">
-                            <img class="img-fluid" src="assets/img/mentions/dappcom.png" alt="" />
-                        </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-2 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal">
-                            <a href="https://dapp.review/">
-                            <img class="img-fluid" src="assets/img/mentions/dappreview.svg" alt="" />
-                        </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-2 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal">
-                            <a href="https://dapponline.io/">
-                            <img class="img-fluid" src="assets/img/mentions/dapponline.svg" alt="" />
-                        </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>-->
 
         
         <!-- Get Involved Section-->
@@ -376,13 +299,13 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcointrxcommunity"><i class="fab fa-fw fa-telegram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcoinbsccommunity"><i class="fab fa-fw fa-telegram"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://eslcointrx.medium.com/esl-coin-trx-disrupting-the-80-billion-language-learning-industry-47f34eb55a98"><i class="fab fa-fw fa-medium"></i></a>                    </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About ESL Coin</h4>
                         <p class="lead mb-0">
-                            About ESL Coin TRX is the Tron Based fork implementation of the <a href="http://eslcoin.org">ESL Coin project</A>. 
+                             ESL Coin BSC is the Binance Smart Chain Based fork implementation of the <a href="http://eslcoin.org">Ethereum based ESL Coin project</A>. 
                         </p>
                     </div>
                 </div>
