--- a/involve.html
+++ b/involve.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>ESL Coin Tron | ESL Coin TRX | Get Involved</title>
+        <title>ESL Coin | ESL Coin | Get Involved</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/ESL%20Coin%20Icon%20100x100.png" />
         <!-- Font Awesome icons (free version)-->
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="index.html">ESL Coin TRX</a>
+                <a class="navbar-brand js-scroll-trigger" href="index.html">ESL Coin</a>
                 <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -32,7 +32,6 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#about">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="involve.html">Get Involved</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="involve.html#governance">Governance</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="auction.html">Auction</a></li> 
                     </ul>
                 </div>
             </div>
@@ -52,7 +51,7 @@
                 <div class="container">
                     <h3>Lots of Ways to Get Involved</h3>
                     <div class="container"></div>
-                        <p>ESL Coin TRX is designed to be an open sourced platform utility token. A DAO and an active community is expected take over the development and overall token governace.</p>
+                        <p>ESL Coin is designed to be an open sourced platform utility token. A DAO and an active community is expected take over the development and overall token governace.</p>
                         <p>During the launch phase, there are many opportunites to get inovlved.</p>
                         <p>Whether you are a developer, have zero coding skills, an influencer or a native English speaker, there are opportunities for you to be part of history in the making!</p>
                         <br>
@@ -63,8 +62,8 @@
                     <a class="btn btn-xl btn-outline-secondary" href="#marketing">
                         Spread the word
                     </a>
-                    <a class="btn btn-xl btn-outline-secondary" href="#charter">
-                        Charter Members
+                    <a class="btn btn-xl btn-outline-secondary" href="#launch">
+                        Token Launch
                     </a>
                     <a class="btn btn-xl btn-outline-secondary" href="#developer">
                         Develop dApps
@@ -89,10 +88,10 @@
                 <!-- Marketing Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p><h3>Referral Program</h3></p><p class="lead">Tell your friends and others about ESL Coin TRX! Invite them to join in on the technical auction using your code and both you and your friends will receive bonus ESL</p>
+                        <p><h3>Social Media Airdrop</h3></p><p class="lead">Tell your friends and others about ESL Coin on social media! A portion of ESL Tokens are set apart for awareness airdrops.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p><h3>Video Bounties</h3></p><p class="lead">Do a video on ESL Coin TRX and we will award you with ESL tokens. The more helpful the video, the bigger the bounty.</p>
+                        <p><h3>Video Bounties</h3></p><p class="lead">Do a video on ESL Coin and we will award you with ESL tokens. The more helpful the video, the bigger the bounty.</p>
                     </div>
                     <div class="col-lg-4 ml-auto">
                         <p><h3>Community Participation</h3></p><p class="lead">We have will be giving out ESL at random times for people on Telegram and via social media competitions.</p>
@@ -100,10 +99,10 @@
                 </div>
             </div>
         </section>
-        <!-- Get Charter Intro -->
-        <section class="page-section mb-0" id="charter">
-                <!-- Charter Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase">Charter Member Program</h2>
+        <!-- Launch Intro -->
+        <section class="page-section mb-0" id="launch">
+                <!-- Launch Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase">Fair Launch</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -111,35 +110,17 @@
                     <div class="divider-custom-line"></div>
                 </div>            
                 <div class="container">
-                    <h3>Be a Charter Member</h3>
+                    <h3>Fair Launch</h3>
                     <div class="container">
-                        <p>Charter Members are participants who believe in the mission of ESL Coin TRX during the prelaunch phase. Through the charter member buy in, they have ESL tokens prior to Day 1 and will be joining the day 1 & 2 auction dividends.</p>
+                        <p>ESL Coin is designed to be a community token and as a result will not be hosting any back room VIP launches. </p>
                     <br>
                     </div>
                 </div>
-                <!-- Charter Member Slots-->
                 <div class="container text-center">
-                    <h3>Day 1 Charter Members</h3>
-                    <div class="divider-custom-icon fa-7x">
-                        <i class="fas fa-user"></i>
-                        <i class="fas fa-user"></i>
-                        <i class="fas fa-user"></i>
-                    </div>
-                    <h3>Day 2 Charter Members</h3>
-                    <div class="divider-custom-icon fa-7x">
-                        <i class="fas fa-user"></i>
-                        <i class="fas fa-spinner fa-pulse"></i>
-                        <i class="fas fa-spinner fa-pulse"></i>
-                        <i class="fas fa-spinner fa-pulse"></i>
-                        <i class="fas fa-spinner fa-pulse"></i>
-                    </div>
                     <div class="container text-center">
-                        <p>To participate in Charter Member Program, please send specified Tron to address:</p>
-                        <p>TDtvnCGJs8AdrENJbYGTqLiyiZ13UELUpX</p>
-                        <p>Current price for charter member seat <h3>5,000 TRX</h3> Seat price will increase with each reservation. The limit to day 2 seats available is 10.</p>
-                        <p>ESL tokens will be sent out to participating addresses within 24 hours of day 1 auction.</p>
-                        <p><i>Disclaimer: The Charter Member Program dividends is based on the dividends collected from the auction on the specified date and number of participants sharing. 50% of the day's dividends will be shared. For example if 5 people participated in day 2 and the day closed at 500,000 TRX, 225,000 TRX will be split 5 ways giving each charter member 45,000 TRX.</i></p>
-                        </div>      
+                        <p>To participate in token launch event, be sure to follow us on Telegram and Twitter to know when the token will be launched.</p>
+                        <p>The token will be listed on PancakeSwap in a free flowing price formant meaning the market will dictate the price of the token.</p>
+                    </div>      
                 </div>
             </div>
         </section>
@@ -155,13 +136,13 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Developer Section Content-->
-                <p>ESL Coin TRX has set aside 26% of the premine tokens for the developers grant program. The language learning space is a 80 billion dollar space and we invite developers to create dApps that accept ESL Coin TRX tokens.</p>
+                <p>ESL Coin has set aside 26% of tokens for the developers grant program. The language learning space is a 80 billion dollar space and we invite developers to create dApps that accept ESL Coin tokens.</p>
                 <div class="row">
                     <div class="col-lg-4 mr-auto">
                         <p><h3>Apply for the grant</h3></p><p class="lead">Send us an <a class="text-secondary" href="mailto:eslcoin@protonmail.com">email</a> including your dApp outline and road map. Include the intended use of the dApp, what need is it addressing in the ESL space and your development level.</p>
                     </div>
                     <div class="col-lg-4 ml-auto">
-                        <p><h3>Develop a working Prototype dApp</h3></p><p class="lead">Create a working prototype dApp for the ESL industry that uses ESL Coin TRX. There are many dApps opportunities in the ESL space from educators accrediation to exam score recording. The sky is the limit! </p>
+                        <p><h3>Develop a working Prototype dApp</h3></p><p class="lead">Create a working prototype dApp for the ESL industry that uses ESL Coin. There are many dApps opportunities in the ESL space from educators accrediation to exam score recording. The sky is the limit! </p>
                     </div>
                     <div class="col-lg-4 ml-auto">
                         <p><h3>Present Prototype </h3></p><p class="lead">Show us your working prototype via a YouTube video and include the dApp contract link. Our team will review the dApp and if it has merit, we will list your dApp on our website and send you a developers bounty. </p>
@@ -183,10 +164,10 @@
                 <div class="container">
                     <h3>Participate in the DAO and get rewarded</h3>
                     <div class="container"></div>
-                        <p>ESL Coin TRX is designed to be an open sourced platform utility token. A DAO and an active community is expected take over the development and overall token governace.</p>
-                        <p>Once phase 4 (CODENAME: TEACHER) is launched, there will be opportunities for token holders to participate in voting through staking their tokens.</p>
-                        <p>Upon the conclusion of each vote, token holders with staked votes will receive rewards for participating in voting.</p>
-                        <p>Token holders wishing to make a bigger impact may also apply to run for the ESL Coin Senate (1,000,000 ESL token minimum) where they may propose measures and receive greater rewards for voting.</p>
+                        <p>ESL Coin is designed to be an open sourced platform utility token. A DAO and an active community is expected take over the development and overall token governace.</p>
+                        <p>Once phase 4 (CODENAME: TEACHER) is launched, there will be opportunities for token holders to participate in voting through staking their tokens. ESL Coin participants can receive 5X their voting power by staking liquidity pool tokens and voting with their LP tokens.</p>
+                        <p>Upon the conclusion of each vote, participants  with staked votes will receive rewards for participating in voting.</p>
+                        <p>Token holders wishing to make a bigger impact may also apply to run for the ESL Coin Senate (1,000,000 ESL token or 200,000 LP tokens minimum) where they may propose measures and for every vote their proposal receives, they receive one token from the participation pool. (Eg. If a Senator's proposal gets 50k votes, they receive an airdrop of 50k ESL at the conclusion of the voting period. )</p>
                     </div>
                 </div>                            
             </div>
@@ -207,14 +188,14 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcointrxcommunity"><i class="fab fa-fw fa-telegram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcoinbsccommunity"><i class="fab fa-fw fa-telegram"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://eslcointrx.medium.com/esl-coin-trx-disrupting-the-80-billion-language-learning-industry-47f34eb55a98"><i class="fab fa-fw fa-medium"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About ESL Coin TRX</h4>
+                        <h4 class="text-uppercase mb-4">About ESL Coin</h4>
                         <p class="lead mb-0">
-                            About ESL Coin TRX is the Tron Based fork implementation of the <a href="http://eslcoin.org">ESL Coin project</A>. 
+                            ESL Coin BSC is the Binance Smart Chain Based fork implementation of the <a href="http://eslcoin.org">Ethereum based ESL Coin project</A>.
                         </p>
                     </div>
                 </div>
@@ -222,7 +203,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © ESL Coin TRX 2021</small></div>
+            <div class="container"><small>Copyright © ESL Coin 2021</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
