--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/eslcointrxheader.png" alt="ESLCoinLogo" />
+                <img class="masthead-avatar mb-5" src="assets/img/eslcoinbscheader.png" alt="ESLCoinLogo" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">The Future of Language Learning</h1>
                 <!-- Icon Divider-->
@@ -50,7 +50,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Disrupting a $80 Billion dollar Industry with Blockchain Technology</p>
+                <p class="masthead-subheading font-weight-light mb-0">Disrupting a $84 Billion dollar Industry with Blockchain Technology</p>
             </div>
         </header>
         <!-- Background Section-->
@@ -192,19 +192,25 @@
                     <div class="row">
                         <div class="col-lg-6 ml-auto">
                             <div class="container">
-                                <p><b>Ecosystem</b>  | 10.00% | 1,000,000 ESL</p>
+                                <p><b>Ecosystem & Growth</b>  | 10.00% | 1,000,000 ESL</p>
                                 <p>ESL tokens reserved for future ecosystem objectives like partnerships, marketing, governance & DAO etc.</p>
                                 <ul>
                                     <li>Tokens Vested over 24 months</li>
-                                    <li>4.00% budgeted for launch month</li>
-                                    <li>1.27% released each month</li>
+                                    <li>1.00% budgeted for launch month</li>
+                                    <li>0.39% released each month</li>
                                 </ul>
                                 <br>
                             </div>
                             <div class="container">
-                                <p><b>Farming Rewards</b>  | 70.00% | 7,000,000 ESL</p>
-                                <p>ESL tokens reserved for liquidity with in-house & external exchanges (Eg. PancakeSwap).</p>
+                                <p><b>Farming Rewards</b>  | 65.00% | 6,500,000 ESL</p>
+                                <p>ESL tokens reserved and set to release through liquidity farming and staking with platform or partner platforms over the course of 2 years.</p>
                                 <br>
+                                <ul>
+                                    <li>Two year emission period</li>
+                                    <li>10.00% budgeted for the farm app's launch month</li>
+                                    <li>3.00% released each month for the first year</li>
+                                    <li>1.83% released for each month in the second year</li>
+                                </ul>
                             </div>
                             <div class="container">
                                 <p><b>Developers Grant</b>  | 10.00% | 1,000,000 ESL</p>
@@ -214,22 +220,17 @@
                         </div>
                         <div class="col-lg-6 ml-auto">
                             <div class="container">
-                                <p><b>Advisors</b> | 3.00% | 300,000 ESL</p>
-                                <p>ESL tokens reserved for the advisory board. advisor tokens are  vested to demonstrate long-term commitment.</p>
-                                <ul>
-                                    <li>Tokens Vested over 12 months</li>
-                                    <li>0.33% released immediately</li>
-                                    <li>0.33% released each month</li>
-                                </ul>
+                                <p><b>Launch Liquidity</b> | 5.00% | 500,000 ESL</p>
+                                <p>ESL tokens reserved for liquidity with in-house & external exchanges (Eg. PancakeSwap)
                                 <br>
                             </div>
                             <div class="container">
-                                <p><b>Team</b> | 7.00% | 700,000 ESL</p>
-                                <p>ESL tokens reserved for the ESL team. Team tokens are locked and vested to demonstrate long-term commitment.</p>
+                                <p><b>Team & Advisors</b> | 10.00% | 1,000,000 ESL</p>
+                                <p>ESL tokens reserved for the ESL team & advisers on board. Team tokens are locked and vested to demonstrate long-term commitment.</p>
                                 <ul>
                                     <li>Tokens locked for 12 months</li>
                                     <li>Tokens Vested over 24 months</li>
-                                    <li>0.7% released each month</li>
+                                    <li>0.42% released each month</li>
                                 </ul>
                                 <br>
                             </div>
@@ -278,7 +279,7 @@
                         <p><h3><i class="fas fa-wrench mr-3"></i>Build dApps on the Ecosystem</h3></p><p class="lead">Are you a developer? We invite you to build dApps for the ESL Coin that are focused on disrupting the language learning ecosystem. </p>
                     </div>
                     <div class="col-lg-4 ml-auto">
-                        <p><h3><i class="fas fa-users mr-3"></i>Participate</h3></p><p class="lead">Be part of history in the making by getting your hands on some ESL Coin <a href="auction.html">at the auction.</a> Stake them and test out the apps for bounties and rewards.</p>
+                        <p><h3><i class="fas fa-users mr-3"></i>Participate</h3></p><p class="lead">Be part of history in the making by getting your hands on some ESL Coin. Stake them and test out the apps for bounties and rewards.</p>
                     </div>
                 </div>
             </div>
@@ -294,13 +295,13 @@
                             Email: <a href="mailto:eslcoin@protonmail.com">eslcoin@protonmail.com</a>
                         </p>
                     </br>
-                        <img class="masthead-avatar mb-5" src="assets/img/eslcointrxheadermini2.png" alt="ESLCoinLogo" />
+                        <img class="masthead-avatar mb-5" src="assets/img/eslcoinbscheadermini.png" alt="ESLCoinLogo" />
                     </div>                    
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcoinbsccommunity"><i class="fab fa-fw fa-telegram"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://eslcointrx.medium.com/esl-coin-trx-disrupting-the-80-billion-language-learning-industry-47f34eb55a98"><i class="fab fa-fw fa-medium"></i></a>                    </div>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcoinbsc"><i class="fab fa-fw fa-telegram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://eslcoinbsc.medium.com/esl-coin-bsc-disrupting-the-80-billion-language-learning-industry-47f34eb55a98"><i class="fab fa-fw fa-medium"></i></a>                    </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About ESL Coin</h4>
