--- a/involve.html
+++ b/involve.html
@@ -167,7 +167,7 @@
                         <p>ESL Coin is designed to be an open sourced platform utility token. A DAO and an active community is expected take over the development and overall token governace.</p>
                         <p>Once phase 4 (CODENAME: TEACHER) is launched, there will be opportunities for token holders to participate in voting through staking their tokens. ESL Coin participants can receive 5X their voting power by staking liquidity pool tokens and voting with their LP tokens.</p>
                         <p>Upon the conclusion of each vote, participants  with staked votes will receive rewards for participating in voting.</p>
-                        <p>Token holders wishing to make a bigger impact may also apply to run for the ESL Coin Senate (1,000,000 ESL token or 200,000 LP tokens minimum) where they may propose measures and for every vote their proposal receives, they receive one token from the participation pool. (Eg. If a Senator's proposal gets 50k votes, they receive an airdrop of 50k ESL at the conclusion of the voting period. )</p>
+                        <p>Token holders wishing to make a bigger impact may also apply to run for the ESL Coin Senate (100,000 ESL token or 20,000 LP tokens minimum staked) where they may propose measures and receive token rewards based on voter participation size.</p>
                     </div>
                 </div>                            
             </div>
@@ -183,13 +183,13 @@
                             Email: <a href="mailto:eslcoin@protonmail.com">eslcoin@protonmail.com</a>
                         </p>
                     </br>
-                    <img class="masthead-avatar mb-5" src="assets/img/eslcointrxheadermini2.png" alt="ESLCoinLogo" />
+                    <img class="masthead-avatar mb-5" src="assets/img/eslcoinbscheadermini.png" alt="ESLCoinLogo" />
                     </div>                    
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcoinbsccommunity"><i class="fab fa-fw fa-telegram"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://eslcointrx.medium.com/esl-coin-trx-disrupting-the-80-billion-language-learning-industry-47f34eb55a98"><i class="fab fa-fw fa-medium"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcoinbsc"><i class="fab fa-fw fa-telegram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://eslcoinbsc.medium.com/esl-coin-bsc-disrupting-the-80-billion-language-learning-industry-47f34eb55a98"><i class="fab fa-fw fa-medium"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
