--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcoinbsc"><i class="fab fa-fw fa-telegram"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://eslcoinbsc.medium.com/esl-coin-bsc-disrupting-the-80-billion-language-learning-industry-47f34eb55a98"><i class="fab fa-fw fa-medium"></i></a>                    </div>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://eslcoinbsc.medium.com/"><i class="fab fa-fw fa-medium"></i></a>                    </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About ESL Coin</h4>
